Another attempt to stop horizontal scroll

--- a/src/app.less
+++ b/src/app.less
@@ -72,7 +72,7 @@
 body {
   display: flex;
   justify-content: center;
-  max-width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
